fast/dom/rtl-scroll-to-leftmost-and-resize.html is a flaky timeout - IPC drops messages https://bugs.webkit.org/show_bug.cgi?id=148951

Reviewed by Anders Carlsson.

Source/WebKit2:

* Platform/IPC/Connection.cpp:
(IPC::Connection::waitForMessage): Don't modify m_waitingForMessage without holding
a lock. This is not part of this fix, but seems necessary for correctness.
(IPC::Connection::processIncomingMessage): Don't interrupt a wait that has already succeeded.

LayoutTests:

* platform/mac-wk2/TestExpectations: Unmark the test (it still fails per platform/mac
expectations, which is unrelated).


Canonical link: https://commits.webkit.org/167099@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@189546 268f45cc-cd09-0410-ab3c-d52691b4dbfc